# rusty-advent

./: .gitignore
2023/day1/: Cargo.toml  problem.txt
2023/day2/: problem.txt
2023/day2/inputs/: test
2023/day5/: problem.txt
2023/day5/inputs/: unit
2023/day5/src/: main.rs
2023/day6/: problem.txt
2023/day6/src/: main.rs
2023/day7/src/: main.rs
2023/day8/: Cargo.toml  problem.txt
2023/day8/src/: main.rs
2024/: Cargo.toml
2024/commons/: Cargo.toml
2024/commons/src/: lib.rs  list.rs
2024/cpp_proj/: CMakeLists.txt  conanfile.txt
2024/cpp_proj/src/: day10.cpp  day11.cpp  day7.cpp  day8.cpp  day9.cpp
2024/day1/: Cargo.toml
2024/day1/src/: main.rs
2024/day2/: Cargo.toml
2024/day2/src/: main.rs
2024/day3/: Cargo.toml
2024/day3/src/: main.rs
2024/day4/: Cargo.toml  mini_input
2024/day4/src/: main.rs  word_search.rs
2024/day5/: Cargo.toml  scratch.txt
2024/day5/src/: main.rs
2024/day6/: Cargo.toml
2024/day6/src/: main.rs
day1/: Cargo.toml
day1/src/: main.rs
day2/: Cargo.toml
day2/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs
day5/: Cargo.toml
day5/inputs/: unit
day5/src/: main.rs
day6/src/: main.rs
day7/: Cargo.toml  problem.txt
day7/src/: main.rs
day8/src/: main.rs
